--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body .card-creators img {
   margin-left: 225px;
   margin-top: -60px;
 }
+body .select {
+  max-width: 356px;
+}
 body .transmission {
   margin-top: 50px;
   background-color: #1C1E25;
@@ -130,10 +133,21 @@ body footer .list-terms {
   opacity: 0.6;
   text-decoration: none;
   text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 body footer .list-terms a {
   text-align: center;
-  font-weight: 500;
+  font-weight: 600;
+  margin-left: -45px;
+  font-size: 13px;
+  color: #8B90A0;
+}
+body footer h3 {
+  color: #E3E3E3;
+  position: absolute;
+  font-size: 14px;
+  margin-top: -43px;
 }
 body footer a {
   color: white;
@@ -145,15 +159,18 @@ body footer a a:hover {
 }
 body footer ul li i {
   font-size: 20px;
-  margin-left: 20px;
+  margin-left: 1px;
   background: rgb(141, 141, 141);
-  padding: 16px;
+  padding: 11px;
   border-radius: 50%;
   color: white;
   cursor: pointer;
 }
 body footer ul li i:hover {
   opacity: 0.9;
+}
+body .hide-desktop {
+  display: none;
 }
 
 @media screen and (min-width: 300px) and (max-width: 900px) {
@@ -212,10 +229,24 @@ body footer ul li i:hover {
     margin-bottom: 60px;
     width: 160px;
   }
+  .footer h3 {
+    text-align: center;
+    position: relative;
+    margin-top: -102px;
+    margin-bottom: 60px;
+  }
   .footer .social-media ul {
     display: block;
     margin: 0px auto;
-    margin-top: -200px;
+    margin-top: -210px;
+  }
+  .footer .list-terms a {
+    text-align: center;
+    margin: 0px;
+    font-size: 14px;
+  }
+  .footer ul li i {
+    margin: 0px;
   }
 }
 
