--- a/style.scss
+++ b/style.scss
@@ -48,7 +48,6 @@ body {
       text-transform: capitalize;
     }
 
-
     h2 {
       color: #F6DAE0;
       font-weight: 300;
@@ -78,11 +77,16 @@ body {
     .privacity {
       p {
         color: #686868;
-        font-size: 12px;
+        font-size: 14px;
+        line-height: 18px;
       }
 
       span {
-        color: white;
+        a {
+          color: white;
+          font-weight: 600;
+          text-decoration: none;
+        }
       }
     }
   }
@@ -150,6 +154,7 @@ body {
       text-decoration: none;
       color: white;
       border: none;
+
     }
   }
 
@@ -164,7 +169,7 @@ body {
 
 
   footer {
-    border-top: 1px solid #1e1d1d;
+    border-top: 1px solid #3E465F;
     padding: 0px 0px 20px 0px;
     width: 100%;
     justify-content: space-around;
@@ -263,7 +268,7 @@ body {
     }
 
     .transmission {
-      width: 95vw !important;
+      width: 94vw !important;
       height: 94px;
     }
   }
@@ -316,7 +321,7 @@ body {
     h3 {
       text-align: center;
       position: relative;
-      margin-top: -102px;
+      margin-top: -100px;
       margin-bottom: 60px;
     }
 
@@ -324,7 +329,7 @@ body {
       ul {
         display: block;
         margin: 0px auto;
-        margin-top: -210px;
+        margin-top: -160px;
       }
     }
 
