--- a/style.scss
+++ b/style.scss
@@ -46,6 +46,7 @@ body {
       color: #FFFFFF;
       font-size: 19px;
       text-transform: capitalize;
+      font-weight: 600;
     }
 
     h2 {
@@ -56,30 +57,34 @@ body {
     }
   }
 
-  .section-2{
-  
-    h3{
+  .section-2 {
+
+    h3 {
       color: #9E00FF;
       font-size: 60px;
       font-weight: 200;
       margin-bottom: 20px;
     }
-    h1{
+
+    h1 {
       font-size: 2.5rem;
       font-weight: 200;
     }
-    h2{
+
+    h2 {
       color: #FFFFFF;
       font-weight: 800;
       letter-spacing: 1px;
       font-size: 25px;
     }
-  p{
-    color: #FFFFFF;
-    font-weight: 400;
-    font-size: 18px;
+
+    p {
+      color: #FFFFFF;
+      font-weight: 400;
+      font-size: 18px;
+    }
   }
-  }
+
   .bg-selection {
     background: #1C1E25;
     border-radius: 19px;
@@ -140,6 +145,11 @@ body {
     border-radius: 20px !important;
     margin: 20px;
 
+    a {
+      text-decoration: none;
+      color: #F6DAE0;
+    }
+
     img {
       border-radius: 50%;
       position: absolute;
@@ -151,6 +161,7 @@ body {
 
     h1 {
       font-size: 16px;
+      font-weight: 700;
 
       span {
         color: #B19BF8;
@@ -188,18 +199,19 @@ body {
   }
 
   .investor {
-    .col{
+    .col {
       display: flex;
       justify-content: center;
     }
-    
+
     p {
       font-weight: 700;
       font-size: 18px;
       color: #FFFFFF;
       opacity: 0.4;
     }
-    img{
+
+    img {
       width: 120px;
       height: auto;
       text-align: center;
@@ -276,12 +288,14 @@ body {
     display: none;
   }
 }
-.info-first{
-  h3{
+
+.info-first {
+  h3 {
     color: white;
     text-transform: uppercase;
     font-weight: 600;
   }
+
 }
 
 @media screen and (min-width: $small) and (max-width: $medium) {
@@ -291,6 +305,7 @@ body {
     .container {
       overflow-x: hidden;
     }
+
     .bg-selection {
       margin-top: 110px;
     }
@@ -333,7 +348,7 @@ body {
 
   .card-host {
     margin-top: 50px !important;
-    
+
   }
 
   .inside-creators-part {
@@ -364,11 +379,12 @@ body {
     p {
       text-align: center;
     }
-    img{
+
+    img {
       width: 80px !important;
       display: flex;
     }
-   
+
   }
 
   .footer {
@@ -412,8 +428,8 @@ body {
     }
   }
 
-  .section-2{
-    br{
+  .section-2 {
+    br {
       display: none;
     }
   }
