ajustes QA Mobile

--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,7 @@ body {
     }
   }
 
+  
   .card-creators {
     img {
       margin-left: 250px;
@@ -302,6 +303,7 @@ body {
   body {
     overflow-x: hidden;
 
+    
     .container {
       overflow-x: hidden;
     }
@@ -387,6 +389,9 @@ body {
 
   }
 
+  .influ-title{
+    font-size: 40px !important;
+  }
   .footer {
     svg {
       display: block;
