--- a/style.css
+++ b/style.css
@@ -285,6 +285,9 @@ body .hide-desktop {
     width: 80px !important;
     display: flex;
   }
+  .influ-title {
+    font-size: 40px !important;
+  }
   .footer svg {
     display: block;
     margin: 0px auto;
