--- a/style.scss
+++ b/style.scss
@@ -223,12 +223,11 @@ body {
 
   footer {
     border-top: 1px solid #3E465F;
-    padding: 0px 0px 20px 0px;
     width: 100%;
     justify-content: space-around;
     display: flex;
     align-items: center;
-
+   
     .list-terms {
       color: white;
       opacity: 0.6;
@@ -268,9 +267,8 @@ body {
       li {
         i {
           font-size: 20px;
-          margin-left: 1px;
           background: rgb(141, 141, 141);
-          padding: 11px;
+          padding: 14px 14px;
           border-radius: 50%;
           color: white;
           cursor: pointer;
@@ -354,7 +352,12 @@ body {
   }
 
   .inside-creators-part {
+    .color-paragraph{
+      margin-bottom: 30px;
+    }
     .btn-subscribe {
+      padding: 12px 70px;
+      font-size: 17px;
       display: block;
       margin: 0px auto;
       border: none !important;
@@ -374,6 +377,7 @@ body {
       display: block;
       width: 400px;
       margin-left: -45px;
+      margin-top: 30px;
     }
   }
 
@@ -393,10 +397,12 @@ body {
     font-size: 40px !important;
   }
   .footer {
+    overflow-y: hidden;
     svg {
       display: block;
       margin: 0px auto;
       width: 160px;
+      margin-top: -35px;
     }
 
     h3 {
@@ -404,6 +410,7 @@ body {
       position: relative;
       margin-top: -100px;
       margin-bottom: 60px;
+      overflow: hidden !important;
     }
 
     .social-media {
@@ -438,6 +445,9 @@ body {
       display: none;
     }
   }
-
+.social-media{
+  margin-top: -24px !important;
+  padding-bottom: 20px
+}
 
 }
