--- a/style.scss
+++ b/style.scss
@@ -307,14 +307,14 @@ body {
     }
 
     .bg-selection {
-      position: relative;
+      position: relative !important;
       margin-top: 50px;
+      z-index: 1 !important;
     }
 
     .insider {
       .info-first {
         margin-top: 230px;
-        margin-bottom: 200px;
         text-align: center;
 
       }
